--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>G-Candy Crush</title>
   </head>
   <body>
+    <div class="score-board">
+      <h3>Score</h3>
+      <h1 id="score"></h1>
+    </div>
     <div class="grid"></div>
     <script src="game.js"></script>
   </body>
